# trade_rs

./: .travis.yml  Cargo.toml  README.md  ROADMAP.md  appveyor.yml
.github/ISSUE_TEMPLATE/: design-proposal-template.md
benches/: b_instruments.rs
src/: lib.rs  order.rs
src/collections/: mod.rs
src/instrument/: Cargo.toml
src/instrument/src/: lib.rs
src/instruments/: currency.rs  mod.rs  order.rs
src/pipeline/: mod.rs
